<resources>
    <string name="app_name">PawFinder</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">No account yet? Create one</string>
    <string name="btn_link_to_login">Already a member? Login</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back">Back</string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to send your password reset instructions.</string>
    <string name="required">This field is required</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="location">Location</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="date">Date</string>
    <string name="address">Address</string>
    <string name="selectImage">Select Image From Gallery</string>
    <string name="report">Report</string>
    <string name="reason">Reason</string>
    <string name="volunteer">Volunteer</string>
    <string name="adopt">Adopt</string>
    <string name="tagline">Resque.Adopt.Volunteer</string>
    <string name="logout">Logout</string>
    <string name="act1">Report an Abuse</string>
    <string name="act2">Adopt</string>
    <string name="act3">Volunteer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
